test/subjects/errors/expr_in_complex_syntax.php
<?php
	$x = 1;
	$y = 2;
	echo "foo {$x + $y} bar\n"; // { phc-error: Variable name or method invocation expected }
?>
